hphp/test/zend/bad/ext/spl/tests/SplFixedArray__construct_param_array.php
<?php

$array = new SplFixedArray( array("string", 1) );

?>